[tool.poetry]
name = "Big Data Engineering Quiz"
version = "0.1"
description = "Example of big data engineering tasks."
readme = "README.md"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
pyspark= "^3.3.1"
pandas= "^1.5.2"
boto3= "^1.26.28"
click = "^8.1.3"
pre-commit = "^2.20.0"
ipykernel = "^6.19.2"
duckdb = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "~=22.12.0"
flake8 = "~=6.0.0"
mypy = "~=0.991"
isort = "~=5.11.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.isort]
py_version = 310
profile = "black"

[tool.black]
line-length = 99
target-version = ['py310']
skip-magic-trailing-comma = true
skip_gitignore = true

[tool.mypy]
no_implicit_optional=true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

